--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "hardhat:compile": "hardhat compile",
-    "hardhat:deploy": "hardhat run --network arb1 scripts/deploy.js"
+    "lint": "next lint",
+    "deploy:contract": "hardhat run --network arb scripts/deploy.js"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "ethers": "^6.0.0",
-    "axios": "^1.4.0",
-    "nft.storage": "^6.0.0",
-    "tailwindcss": "^4.0.0"
+    "ethers": "^5.7.2",
+    "wagmi": "^1.3.0",
+    "viem": "^1.21.4",
+    "@rainbow-me/rainbowkit": "^1.0.12",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
-    "hardhat": "^2.16.0",
-    "@nomiclabs/hardhat-ethers": "^3.0.0",
-    "@openzeppelin/contracts": "^4.9.3"
+    "hardhat": "^2.22.1",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0"
   }
 }
