--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "rekt-story-nft-webapp",
+  "name": "rekt-story-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "deploy:contract": "hardhat run --network arb scripts/deploy.js"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "ethers": "^5.7.2",
-    "wagmi": "^1.3.0",
-    "viem": "^1.21.4",
-    "@rainbow-me/rainbowkit": "^1.0.12",
-    "axios": "^1.6.7"
+    "nft.storage": "^7.1.1",
+    "next": "13.5.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "hardhat": "^2.22.1",
-    "@nomiclabs/hardhat-ethers": "^2.2.2",
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0"
+    "hardhat": "^2.19.4"
   }
 }
